# Basic--

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Clipboard-20251017.txt  README.md  make.bat
.github/workflows/: ci.yml
docs/: BACKLOG.md  CONTRACTS.md  OVERVIEW.md  PLANNING.md
include/basicpp/command/: command.hpp  registry.hpp
include/basicpp/core/: result.hpp
include/basicpp/history/: coalescer.hpp
include/basicpp/state/: state.hpp  state_machine.hpp
src/cli/: CMakeLists.txt  main.cpp  transpile.cpp  transpile.hpp
src/codegen/: generator.cpp  generator.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
tests/: test_cli_transpile.cpp  test_codegen.cpp  test_command_registry.cpp  test_lexer.cpp  test_parser.cpp  test_state_machine.cpp
